refactor(report-controller): replace Collectors.toList() with Stream.toList()